--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio src="files/mp3/1.mp3" autoplay loop></audio>
+    <audio autoplay><source src="files/mp3/1.mp3" type="audio/mpeg"></audio>
     <div class="container">
         <h1>Site Under Construction</h1>
     </div>
